...
      Uri.parse(url),
      headers: <String, String>{
        'Content-Type': 'application/json; charset=UTF-8',
      },
      body: jsonEncode(<String, String>{
        'username': _usernameController.text,
        'email': _emailController.text,
        'firstName': _firstNameController.text,
        'lastName': _lastNameController.text,
        'password': _passwordController.text,
      }),
    );

    if (response.statusCode == 201) {
      _message = "UserCreated";
    } else {
...
